// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-file #render error should render component as expected 1`] = `
<gux-form-field-file>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-form-field-error-i" aria-invalid="true" id="avatar" name="avatar" slot="input" type="file">
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-file>
`;

exports[`gux-form-field-file #render help should render component as expected 1`] = `
<gux-form-field-file>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-form-field-help-i" id="avatar" name="avatar" slot="input" type="file">
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-file>
`;

exports[`gux-form-field-file #render indicator marks should render component as expected (1) 1`] = `
<gux-form-field-file>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render indicator marks should render component as expected (2) 1`] = `
<gux-form-field-file indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render indicator marks should render component as expected (3) 1`] = `
<gux-form-field-file indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-file>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-file>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" disabled="" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-file>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label gux-required">
        <slot name="label"></slot>
        <gux-form-field-label-indicator required="" variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" required="" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-info should render component as expected 1`] = `
<gux-form-field-file>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" aria-describedby="gux-label-info-beta-i" id="avatar" name="avatar" slot="input" type="file">
  <gux-label-info-beta id="gux-label-info-beta-i" slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-position should render component as expected (1) 1`] = `
<gux-form-field-file>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-position should render component as expected (2) 1`] = `
<gux-form-field-file label-position="above">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-position should render component as expected (3) 1`] = `
<gux-form-field-file label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;

exports[`gux-form-field-file #render label-position should render component as expected (4) 1`] = `
<gux-form-field-file label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <slot name="input"></slot>
        <div class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <label for="avatar" slot="label">
    Upload a profile picture
  </label>
  <input accept="image/png, image/jpeg" id="avatar" name="avatar" slot="input" type="file">
</gux-form-field-file>
`;
